--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -376,41 +376,41 @@ layout: post
   - Self-Select PIN, See:
     - 
 
-  - Practitioner PIN
-    - allows one to authorize your tax practitioner to enter or generate your PIN. Your electronic return is considered a valid only when it **includes your PIN; last name; date of birth; and IP PIN**
-    - If filing jointly one needs ALL Spouse info.
+  - Practitioner PIN  
+    - allows one to authorize your tax practitioner to enter or generate your PIN. Your electronic return is considered a valid only when it **includes your PIN; last name; date of birth; and IP PIN**  
+    - If filing jointly one needs ALL Spouse info.  
 
 
-  - Form 8453  <button onclick="buttonPubs()">Open: irs-pubs</button>
+  - Form 8453  <button onclick="buttonPubs()">Open: irs-pubs</button>  
 
-- Identity Protection PIN, See:  
-  - See: Publication 5477, All taxpayers now eligible for Identity Protection PINs  
+- Identity Protection PIN, See:   
+  - See: Publication 5477, All taxpayers now eligible for Identity Protection PINs    
   - [IP-PIN video](https://www.youtube.com/watch?v=YhfSZuwGrlY)  
   - [How to get IP-PIN](https://www.irs.gov/identity-theft-fraud-scams get-an-identity-protection-pin)  
-  - [IP PIN TOOL](https://www.irs.gov/ippin)
+  - [IP PIN TOOL](https://www.irs.gov/ippin)  
 
-- Power of attorney (POA)
-  - Attach Form **8453**
+- Power of attorney (POA)  
+  - Attach Form **8453**  
 
-- Refunds, See:
-  - Offset against debts - The IRS may take all or part of your refund to past-due amounts
-  - For inquiries:  Use App
+- Refunds, See:  
+  - Offset against debts - The IRS may take all or part of your refund to past-due amounts  
+  - For inquiries:  Use App  
 
-- Penalities and Interest - Interest is charged from the due date of your return, even if you get an extension.  Penalities (failure-to-file penalty) is ~5% for each month or part of a month that it is late, but not more 25%.
+- Penalities and Interest - Interest is charged from the due date of your return, even if you get an extension.  Penalities (failure-to-file penalty) is ~5% for each month or part of a month that it is late, but not more 25%.  
 
 
 <script> function buttonvita() { window.open("www.IRS.gov/VITA"); } </script>
 <script> function buttontec() { window.open("www.IRS.govTCE"); } </script>
 
-  - Free Help With Your Return
-    - **Volunteer Income Tax Assistance, VITA** <button onclick="buttonvita()">See: VITA Info</button>
-    - IRS.gov/VITA, 
-    - download the *free IRS2Go app, 
-    - call *800-906-9887* to find the nearest VITA location
-    - **Tax Counseling for the Elderly, TCE** <button onclick="buttonvtec()">See: TCE Info</button>
-    - IRS.gov/TCE, *etc*. to find the nearest TCE location 
+  - Free Help With Your Return  
+    - **Volunteer Income Tax Assistance, VITA** <button onclick="buttonvita()">See: VITA Info</button>  
+    - IRS.gov/VITA   
+    - download the *free IRS2Go app,  
+    - call *800-906-9887* to find the nearest VITA location  
+    - **Tax Counseling for the Elderly, TCE** <button onclick="buttonvtec()">See: TCE Info</button>  
+    - IRS.gov/TCE, *etc*. to find the nearest TCE location  
 
-  - 1.24 Using a Tax Professional
+- When Using a Tax Professional  (ADD MORE??)  
 
 ## When Do I File?
 
@@ -418,30 +418,43 @@ layout: post
 |:-:|
 |![Table 1.5](/assets/images/images.pub.17/table.1.5.png)|
 
-- Filing late
-  - Penalities and Interest - Interest is charged from the due date of your return, even if you get an extension.  Penalities (failure-to-file penalty) is ~5% for each month or part of a month that it is late, but not more 25%.
+- Filing late  
+  - Penalities and Interest - Interest is charged from the due date of your return, even if you get an extension.  Penalities (failure-to-file penalty) is ~5% for each month or part of a month that it is late, but not more 25%.  
 
-- Filing for a decedent
-  - See **Pub. 559**: Survivors, Executors and Administrators 
+- Filing for a decedent  
+  - See **Pub. 559**: Survivors, Executors and Administrators   
 
-- Extensions of Time To File, Automatic Extension
+- Extensions of Time To File, Automatic Extension  
   - **Form 4868**: Application for Automatic Extension of Time to File U.S. Individual Income Tax Return  
-  - **Extensions $\geq$ 2 month, Use:6 months**
+  - **Extensions $\geq$ 2 month, Use:6 months**  
 
 
-- For Non-resident alien
-  - If you earned in the US, then 4/15 
-  - If you don't earn wages subject to W/H, then 6/15. **????**
+- For Non-resident alien  
+  - If you earned in the US, then 4/15   
+  - If you don't earn wages subject to W/H, then 6/15. **????**  
 
-E-file options.
+- Qualified hospitalization
+  - Any **hospitalization outside** the US (eg. military)  
+  - **Up to 5 years in the US**  
+  - See: See Pub. 3, **Armed Forces' Tax Guide**  
+  - Included in medical expenses amounts are the cost of inpatient care if you are there for treatment, this includes for meals and lodging.  
 
-E-file using your personal computer or a tax professional.
 
-E-file & pay by credit or debit card or by direct transfer from your bank account
+- **6 Step of How to File**  
+  1. Get all records  
+  1. Get forms, schedules, publications  
+  1. Fill in return  
+  1. Check return  
+  1. Sign and Date return  
+  1. Attach all req'd forms & schedules  
 
-Filing a paper Form 4868
+- Substiture forms  
+  - In general, you cannot yuse your forms  
+  - BUT se also Pub. **1167**, General Rules and Specifications for Substitute Tax Forms and Schedules  
 
-- 1.6 When Do I Have To File?
+
+
+
 
 - 1.7 Where Do I File?
 
