--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -466,25 +466,13 @@ layout: post
 
 ## 2. Filing Status
 
-### 2.1 What's New & Reminders
-
-### 2.2 
-
-### 2.3 
-
-### 2.4 
-
-### 2.5 
-
-### 2.6 
-
-### 2.7
+2.1 What's New & Reminders
 
   - Filing status rules
 
   - Tax benefits for married taxpayers
 
-### Filing Status Categories
+- Filing Status Categories
 
   - Single
 
@@ -510,29 +498,29 @@ layout: post
 
   - Who Can Claim a Dependent?
 
-###### Qualifying Child
+##### Qualifying Child
 
-###### Qualifying Relative
+##### Qualifying Relative
 
 ## 4. Tax Withholding & Estimated Tax
 
-### What's New
+- What's New
 
   - Changes in Tax Withholding
 
-### Reminders
+-  Reminders
 
   - Estimated Tax Payments
 
   - Changes in Taxable Income
 
-### Introduction
+-  Introduction
 
   - Understanding Tax Withholding
 
-###### W-4 Forms
+-  W-4 Forms
 
-###### Adjusting Your Withholding
+-  Adjusting Your Withholding
 
 
 ## APPENDIX: Publications & Forms Mentioned
