--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -77,14 +77,15 @@ layout: post
 - Alternative motor vehicle credit **-->** Expired
 
 - Self-employed health insurance deduction:  <button onclick="buttonPubs()">Open: irs-pubs</button> 
-  - Use Form 7206, report on 1040 Schedule 1, line 17
+  - Use Form 7206, Self-Employed Health Insurance Deduction  
+  - report on 1040 Schedule 1, line 17 
 
 - 1X Charitable distribution: 2023 **-->** distribute < \$50K from IRA
 
 <hr class="red">
 
 - Increase required minimum distribution age **-->** 72yr  <button onclick="buttonPubs()">Open: irs-pubs</button> 
-  - Use Pub. 590–B
+  - Use Pub. 590–B, Distributions from Individual Retirement Arrangements (IRAs) 
 
 <hr class="red">
 
@@ -92,11 +93,11 @@ layout: post
 
 |Problem|
 |-|
-|\$6,500 (\$7,500 for individuals $\gt$ 50 yr) from \$6,000 (\$7,000 for individuals $\gt$ 50 yr)**|
+|\$6,500 (\$7,500 for individuals $\gt$ 50 yr)<br>from \$6,000 (\$7,000 for individuals $\gt$ 50 yr)**|
 
 <hr class="red">
 
-- Deferred compensation contribution (401(k), 403(b),fed gov Thrift Savings Plan) increased: **-->** $\gt$ \$22.5 K ( \$30 K, if $\gt$ \$50 yr), also for most 457 plans  <button onclick="buttonPubs()">Open: irs-pubs</button> 
+- Deferred compensation contribution (401(k), 403(b),fed gov Thrift Savings Plan) increased:<br>  $\gt$ \$22.5 K ( \$30 K, if $\gt$ \$50 yr), also for most 457 plans  <button onclick="buttonPubs()">Open: irs-pubs</button> 
 
 - Insurance premiums for retired public safety officers: can now exclude **\$3 K** from income
 
@@ -130,7 +131,7 @@ layout: post
 
 |Married filing jointly,<br>Qualifying surviving spouse|Single,<br>Head of household|Married filing separately
 |-|-|-|
-| $\leq$ \$116,000$ and $\leq$ \$136,000$ | $\leq$ \$73,000 and $\leq$ \$83,000 | $\leq$ \$10,000 |
+| $\leq$ \$116,000 and $\leq$ \$136,000$ | $\leq$ \$73,000 and $\leq$ \$83,000 | $\leq$ \$10,000 |
 
 - **IF**
   1. you live with your spouse **or** 
