Clarifications of pub 17

--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -6,10 +6,6 @@ layout: post
 
 <script>function buttonPubs() { window.open("https://www.irs.gov/forms-pubs"); }</script>
 
-> W/H = Withholding  
-> SS = Social security  
-> AGI = Adjusted gross income  
-{: .block-tip }  
 
 - **Main Points**
 
@@ -29,6 +25,11 @@ layout: post
 
 <hr class="red">
 
+> W/H = Withholding  
+> SS = Social security  
+> AGI = Adjusted gross income  
+{: .block-tip }  
+
 # Chapter 1. Filing Information
 
 ## 1.1 New for 2023, Reminders & Introduction
@@ -39,8 +40,10 @@ layout: post
 
 1. Clean vehicle credit (New): 
   - Use Form 8936 & and Schedule A (Form 8936) & 1040-Schedule 3, line 6f:  <button onclick="buttonPubs()">Open: irs-pubs</button> 
+
 2. Previously owned clean vehicle credit: 
   - Use Form 8936, credit is available for previously owned clean vehicles
+
 3. See [IRS Video, 1 hr](https://www.youtube.com/watch?v=DtYufJmdm1A)
 
 > "The credit is lesser of $4,000 or 30% of the sales price of the previously owned clean vehicle you acquired and placed into service that year."
@@ -90,18 +93,21 @@ layout: post
 <hr class="red">
 
 - IRA contribution limit increased to:
-
-|Problem|
-|-|
-|\$6,500 (\$7,500 for individuals $\gt$ 50 yr)<br>from \$6,000 (\$7,000 for individuals $\gt$ 50 yr)**|
+  - Starting in 2023, the limit for **IRA contributions is $6,500**. If you're **50 or older, the limit is $7,500**. 
+  - WAS (Before 2023) $6,000 and $7,000.
 
 <hr class="red">
 
-- Deferred compensation contribution (401(k), 403(b),fed gov Thrift Savings Plan) increased:<br>  $\gt$ \$22.5 K ( \$30 K, if $\gt$ \$50 yr), also for most 457 plans  <button onclick="buttonPubs()">Open: irs-pubs</button> 
+- In 2023, if you're in a 401(k), 403(b), or the federal Thrift Savings Plan, THEN you can now contribute up to **$22,500 per year**. If you're **50 or older, the limit is $30,000**. 
+  - This also applies to most 457 plans. 
 
 - Insurance premiums for retired public safety officers: can now exclude **\$3 K** from income
 
-- ????Exception to the 10% additional tax for early distributions????
+- There are exceptions to the 10% extra tax for taking money out of a retirement plan early. These exceptions include:
+  - Distributions related to federally declared disasters.
+  - Distributions made to someone who is terminally ill.
+  - Distributions to firefighters who are either 50 years old or have 25 years of service under their plan.
+  - See: **Form 5329 and Publication 590-B**.
 
 - Use: `www.irs.gov/directfile`
 
@@ -113,7 +119,8 @@ layout: post
 
 - Distributions to terminally ill individuals. The exception to the 10% additional tax for early distributions is expanded to distributions made after 12/29/2022, to a certified individual. See Pub. 590-B  <button onclick="buttonPubs()">Open: irs-pubs</button> 
 
-- **??   Certain corrective distributions not subject to 10% early distribution tax. Beginning with distributions made on 12/29/2022, and after, the 10% additional tax on early distributions will not apply to the income attributed to a corrective IRA distribution, as long as the corrective distribution is made on or before the due date (including extensions) of the income tax return.**
+- Starting 12/29/2022, the 10% additional tax on early IRA distributions won't apply to income from a *corrective distribution*, as long as the correction is made by the tax return due date (including extensions).
+  - Follow up?
 
 - The IRS cannot issue refunds before mid-February 2024 for returns that claim Additional child tax credit (ACTC).
 
@@ -127,22 +134,17 @@ layout: post
 
 <hr class="red">
 
-- ????? `Modified adjusted gross income` (mAGI) limit for traditional IRA contributions. If you are covered by a retirement plan at work, your **?????? eduction** for contributions to a traditional IRA is **reduced/phased out** if the modified AGI is:
+- In 2023, if you're covered by a retirement plan at work, your ability to deduct contributions to a traditional IRA is reduced if your modified adjusted gross income (AGI) is:
+  - Between $116,000 and $136,000 for married couples filing jointly or qualifying surviving spouses.
+  - Between $73,000 and $83,000 for single individuals or heads of household.
+  - Less than $10,000 for married individuals filing separately.
+  - If your spouse is covered by a retirement plan at work but you aren’t, your deduction is reduced if your modified AGI is between $218,000 and $228,000. If it's $228,000 or more, you can't deduct contributions to a traditional IRA.
+  - For more information, see Chapter 9, How Much Can You Deduct.
 
 |Married filing jointly,<br>Qualifying surviving spouse|Single,<br>Head of household|Married filing separately
 |-|-|-|
-| $\leq$ \$116,000 and $\leq$ \$136,000$ | $\leq$ \$73,000 and $\leq$ \$83,000 | $\leq$ \$10,000 |
+| Between $116,000 and $136,000 | Between $73,000 and $83,000 | Less than $10,000 |
 
-- **IF**
-  1. you live with your spouse **or** 
-  2. file jointly, **and** the spouse has a retirement plan (but you don't)
-  - **THEN the deduction is phased out**.
-  
-- **IF** ???????????????
-  1. (\$218K $\lt$ **mAGI** $\lt$ \$228K ) **or** 
-  2. **mAGI** $\geq$ \$228,000
-  - **Then NO IRA deduction**
-  - See **????? How Much Can You Deduct in chapter 9**
 
 <hr class="red">
 
