--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -158,7 +158,12 @@ layout: post
 
 <hr class="red">
 
-- 2024 modified AGI limits. You can find information about the 2024 contribution and modified AGI limits in Pub. 590-A. Tax law changes for 2024. When you figure how much income tax you want withheld from your pay and when you figure your estimated tax, consider tax law changes effective in 2024. For more information, see Pub. 505. Alternative minimum tax (AMT) exemption amount increased. The AMT exemption amount is increased to \$81,300 (\$126,500 if married filing jointly or qualifying surviving spouse; \$63,250 if married filing separately). The income levels at which the AMT exemption begins to phase out have increased to \$578,150 (\$1,156,300 if married filing jointly or qualifying surviving spouse).  
+- In 2023, your ability to contribute to a Roth IRA is reduced in these cases:
+
+  - If you're married filing jointly or a qualifying surviving spouse, your contributions are reduced if your modified AGI is $218,000 or more. You can't contribute if your AGI is $228,000 or more.
+  - If you're single, head of household, or married filing separately (and didn't live with your spouse in 2023), contributions are reduced if your modified AGI is $138,000 or more. You can't contribute if your AGI is $153,000 or more.
+  - If you're married filing separately and lived with your spouse during the year, your ability to contribute is reduced if your modified AGI is more than $0. You can't contribute if your AGI is $10,000 or more.
+  - See Chapter 9, *Can You Contribute to a Roth IRA*.
 
 <hr class="red">
 
@@ -443,6 +448,10 @@ layout: post
   - Included in medical expenses amounts are the cost of inpatient care if you are there for treatment, this includes for meals and lodging.  
 
 
+<hr class="red">
+
+Table 1-6. Six Steps for Preparing Your Paper Return
+
 - **6 Step of How to File**  
   1. Get all records  
   1. Get forms, schedules, publications  
@@ -451,21 +460,44 @@ layout: post
   1. Sign and Date return  
   1. Attach all req'd forms & schedules  
 
+
+<hr class="red">
+
 - Substiture forms  
   - In general, you cannot yuse your forms  
   - BUT se also Pub. **1167**, General Rules and Specifications for Substitute Tax Forms and Schedules  
 
+<hr class="red">
 
+- Where Do I File?
+  - [EFILE](https://www.irs.gov/irs-free-file-do-your-taxes-for-free)
 
+<hr class="red">
 
+Accounting Periods
 
-- 1.7 Where Do I File?
+Most people use a calendar year for their tax returns, covering January 1 to December 31. If you don't, you're using a fiscal year, which is any 12-month period ending on the last day of a month other than December. A 52-53 week fiscal year lasts between 52 and 53 weeks and ends on the same day of the week each year. You choose your accounting period (tax year) when you file your first tax return, and it can't be longer than 12 months.
+For more details on accounting periods or how to change them, see Publication 538.
 
-- 1.8 What Happens After I File?
+Accounting Methods
 
-- 1.9 What If I Made A Mistake?
+Your accounting method is how you record income and expenses. Most people use either the cash or accrual method. You choose one when you file your first return, and to change it later, you need IRS approval. Use Form 3115 to request a change.
 
+1. Cash Method: You report income when you actually receive it and deduct expenses when you pay them. Most individuals use this method.
+1. Constructive Receipt: You’re considered to have received income if it’s available to you, even if you haven’t physically received it. For example, interest credited to your bank account on December 31 is taxable in that year, even if you withdraw it later.
+1. Garnished Wages: If your wages are garnished or used to pay debts, you must include them in your income.
+1. Debts Paid for You: If someone cancels or pays your debts (not as a gift or loan), you must include it in your income.
+1. Payments to a Third Party or Agent: If someone else is paid from your property or an agent receives income for you, it's considered your income when they receive it.
+1. Checks: A check made available to you before the end of the tax year counts as income for that year, whether or not you cash it.
 
+  - If there are circumstances where you don’t have access to the income, you might not have "constructively received" it.
+
+   - Example: A teacher agrees to only receive the difference between their salary and the cost of a substitute teacher. The amount deducted for the substitute is not considered "constructively received."
+
+- Accrual Method: You report income when you earn it, not when you receive it, and you deduct expenses when you incur them, not when you pay them.
+  - Advance Payments: Any payments you receive in advance, like rent or interest, are generally included as income in the year you receive them, regardless of your accounting method. However, a limited deferral may apply for certain payments.
+
+- See Publication 538, Accounting Periods and Methods
 
 ## 2. Filing Status
 
