FIXING IRA contrib $$$

--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -44,7 +44,7 @@ layout: post
 2. Previously owned clean vehicle credit: 
   - Use Form 8936, credit is available for previously owned clean vehicles
 
-3. See [IRS Video, 1 hr](https://www.youtube.com/watch?v=DtYufJmdm1A)
+3. See IRS Video [Inflation Reduction Act: New and Used Clean Vehicles](https://www.youtube.com/watch?v=DtYufJmdm1A)
 
 > "The credit is lesser of $4,000 or 30% of the sales price of the previously owned clean vehicle you acquired and placed into service that year."
 
@@ -67,10 +67,10 @@ layout: post
 <hr class="red">
 
 - **Schedule 3-1040 Add'ns**  <button onclick="buttonPubs()">Open: irs-pubs</button> 
-- Line 5a **-->** Residential clean energy credit: Form 5695
-- Line 5b **-->** Energy efficient home improvement credit: Form 5695
-- Line 6m **-->** Credit for previously owned clean vehicles: Form 8936
-- Line 13c **-->** Elective payment election amount: Form 3800
+- Line 5a **-->** Form 5695, Residential clean energy credit  
+- Line 5b **-->** Form 5695, Energy efficient home improvement credit  
+- Line 6m **-->** Form 8936, Credit for previously owned clean vehicles  
+- Line 13c **-->** Form 3800, Elective payment election amount  
 
 <hr class="red">
 
@@ -94,7 +94,7 @@ layout: post
 
 - IRA contribution limit increased to:
   - Starting in 2023, the limit for **IRA contributions is $6,500**. If you're **50 or older, the limit is $7,500**. 
-  - WAS (Before 2023) $6,000 and $7,000.
+  - WAS (Before 2023) \$6,000 and \$7,000.
 
 <hr class="red">
 
