MUST Read Mathjax and github!

--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -94,7 +94,7 @@ layout: post
 
 - IRA contribution limit increased to:
   - Starting in 2023, the limit for **IRA contributions is $6,500**. If you're **50 or older, the limit is $7,500**. 
-  - WAS (Before 2023) \$6,000 and \$7,000.
+  - Before 2023, *Was \$6,000 and $7,000*.
 
 <hr class="red">
 
@@ -129,7 +129,7 @@ layout: post
 - Standard mileage rates
 
 |Business|Charitable organizations|Medical|
-|-|-|-|
+|:-:|:-:|:-:|
 |65.5 cents|14 cents|22 cents|
 
 <hr class="red">
