--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -94,7 +94,7 @@ layout: post
 
 - IRA contribution limit increased to:
   - Starting in 2023, the limit for **IRA contributions is $6,500**. If you're **50 or older, the limit is $7,500**. 
-  - Before 2023, *Was \$6,000 and $7,000*.
+  - Before 2023, *Was 6,000 and 7,000*.
 
 <hr class="red">
 
