--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -19,8 +19,7 @@ layout: post
 2. Pub. 225, Farmer's Tax Guide
 3. Pub. 587, Business Use of Your Home (Including Use by Day-Care Providers) 
 
-> For IRS Video Information:  
-> [IRS YouTube](https://www.youtube.com/@irsvideos)  
+> For IRS Video Information: [IRS YouTube](https://www.youtube.com/@irsvideos)  
 {: .block-tip }  
 
 <hr class="red">
