--- a/_posts/2024-09-11-tax-tips.md
+++ b/_posts/2024-09-11-tax-tips.md
@@ -9,51 +9,50 @@ Taxpayers have the right to finality when working with the IRS. For example, tax
 
 Here's what taxpayers need to know about their right to finality:
 
-Taxpayers have the right to know:
-    1. The maximum amount of time they have to challenge the IRS's position.
-    1. The maximum amount of time the IRS has to audit a particular tax year or collect a tax debt. 
+Taxpayers have the right to know:  
+    1. The maximum amount of time they have to challenge the IRS's position.  
+    1. The maximum amount of time the IRS has to audit a particular tax year or collect a tax debt.   
     1. When the IRS has finished an audit.  
 
 The **IRS generally has three years from the date taxpayers file their returns to assess any additional tax** for that tax year.
      
-There are some **limited exceptions to the three-year rule**, 
-  - *including when taxpayers fail to file returns for specific years or file false or fraudulent returns. In these cases, the IRS can assess tax for that tax year at any time*.  
+There are some **limited exceptions to the three-year rule**, *including when taxpayers fail to file returns for specific years or file false or fraudulent returns. In these cases, the IRS can assess tax for that tax year at any time*.  
 
-The **IRS generally has 10 years from the assessment date to collect unpaid taxes**. 
+The **IRS generally has 10 years from the assessment date to collect unpaid taxes**.  
   - The IRS can't extend this 10-year period unless the taxpayer agrees to extend the period as part of an installment agreement to pay tax debt or a court judgment allows the IRS to collect unpaid tax after the 10-year period.
      
-There are circumstances when the 10-year collection period may be suspended. 
+There are circumstances when the 10-year collection period may be suspended.  
   - This can happen when the IRS can't collect unpaid tax due to the taxpayer's bankruptcy or there's an ongoing collection due process proceeding involving the taxpayer.  
 
 A **statutory notice of deficiency** is a letter proposing additional tax the taxpayer owes. This notice must include the deadline for filing a petition with the tax court to challenge the amount proposed.  
 
-Generally, a taxpayer can be subject to only one audit per tax year. The IRS may reopen an audit for a previous tax year if the agency finds it necessary. This could happen, for example, if a taxpayer files a fraudulent return.
+Generally, a taxpayer can be subject to only one audit per tax year. The IRS may reopen an audit for a previous tax year if the agency finds it necessary. This could happen, for example, if a taxpayer files a fraudulent return.  
 
 - **More Information**
 
-1. [Publication 1, Your Rights as a Taxpayer](https://www.irs.gov/pub/irs-pdf/p1.pdf)
-1. [Taxpayer Advocate Service](https://www.taxpayeradvocate.irs.gov/)
+1. [Publication 1, Your Rights as a Taxpayer](https://www.irs.gov/pub/irs-pdf/p1.pdf)  
+1. [Taxpayer Advocate Service](https://www.taxpayeradvocate.irs.gov/)  
 
 - **Links**
 
-1. https://www.irs.gov/newsroom/fact-sheets
-1. https://www.irs.gov/pub/taxpros/fs-2024-26.pdf
-1. https://www.irs.gov/newsroom/irs-media-relations-office-contact-number
-1. https://www.irs.gov/newsroom/around-the-nation
-1. https://www.irs.gov/newsroom/multimedia-center
-1. https://www.irs.gov/newsroom/irs-radio-psas
-1. https://www.irs.gov/help/tax-scams/recognize-tax-scams-and-fraud
-1. https://www.irs.gov/newsroom/the-tax-gap
-1. https://www.irs.gov/newsroom/irs-tax-tips
-1. https://www.irs.gov/newsroom/topics-in-the-news
-1. https://www.irs.gov/newsroom/news-releases-for-current-month
-1. https://www.irs.gov/about-irs/irs-the-basics
-1. https://www.irs.gov/newsroom/understanding-irs-guidance-a-brief-primer
+1. https://www.irs.gov/newsroom/fact-sheets  
+1. https://www.irs.gov/pub/taxpros/fs-2024-26.pdf  
+1. https://www.irs.gov/newsroom/irs-media-relations-office-contact-number  
+1. https://www.irs.gov/newsroom/around-the-nation  
+1. https://www.irs.gov/newsroom/multimedia-center  
+1. https://www.irs.gov/newsroom/irs-radio-psas  
+1. https://www.irs.gov/help/tax-scams/recognize-tax-scams-and-fraud  
+1. https://www.irs.gov/newsroom/the-tax-gap  
+1. https://www.irs.gov/newsroom/irs-tax-tips  
+1. https://www.irs.gov/newsroom/topics-in-the-news  
+1. https://www.irs.gov/newsroom/news-releases-for-current-month  
+1. https://www.irs.gov/about-irs/irs-the-basics  
+1. https://www.irs.gov/newsroom/understanding-irs-guidance-a-brief-primer  
 
 - **IRS Resources**
 
-1. https://www.irs.gov/help/contact-your-local-irs-office
-1. https://www.irs.gov/filing
-1. https://www.irs.gov/forms-instructions
-1. https://www.irs.gov/help/let-us-help-you
-1. https://www.irs.gov/taxpayer-advocate
+1. https://www.irs.gov/help/contact-your-local-irs-office  
+1. https://www.irs.gov/filing  
+1. https://www.irs.gov/forms-instructions  
+1. https://www.irs.gov/help/let-us-help-you  
+1. https://www.irs.gov/taxpayer-advocate  
