--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -33,7 +33,7 @@ layout: post
 
 ## 1.1 New for 2023, Reminders & Introduction
 
-- Child tax credit **-->** \$1,600 for each qualifying child  
+- Child tax credit **-->** 1,600 for each qualifying child  
 
 <hr class="red">
 
@@ -61,7 +61,7 @@ layout: post
 
 |Single,<br>Married filing separately |Married filing jointly,<br>Qualifying surviving spouse |Head of household |
 |-|-|-|
-|\$13,850|\$27,700|\$20,800|
+|13,850|27,700|20,800|
 
 <hr class="red">
 
@@ -82,7 +82,7 @@ layout: post
   - Use Form 7206, Self-Employed Health Insurance Deduction  
   - report on 1040 Schedule 1, line 17 
 
-- 1X Charitable distribution: 2023 **-->** distribute < \$50K from IRA
+- 1X Charitable distribution: 2023 **-->** distribute < 50K from IRA
 
 <hr class="red">
 
@@ -100,7 +100,7 @@ layout: post
 - In 2023, if you're in a 401(k), 403(b), or the federal Thrift Savings Plan, THEN you can now contribute up to **$22,500 per year**. If you're **50 or older, the limit is $30,000**. 
   - This also applies to most 457 plans. 
 
-- Insurance premiums for retired public safety officers: can now exclude **\$3 K** from income
+- Insurance premiums for retired public safety officers: can now exclude **3 K** from income
 
 - There are exceptions to the 10% extra tax for taking money out of a retirement plan early. These exceptions include:
   - Distributions related to federally declared disasters.
@@ -110,13 +110,13 @@ layout: post
 
 - Use: `www.irs.gov/directfile`
 
-- Health Flexible Spending Act (HFSA) under cafeteria plans = \$3,050, under section 125(i) on voluntary salary redux.
+- Health Flexible Spending Act (HFSA) under cafeteria plans = 3,050, under section 125(i) on voluntary salary redux.
 
 - Temp. allowance of 100% business meal deduction: **Expired**, section 210.
 
 - Diaster tax relief - See Disaster-Related Relief in Pub. 590-B   <button onclick="buttonPubs()">Open: irs-pubs</button> 
 
-- Distributions to terminally ill individuals. The exception to the 10% additional tax for early distributions is expanded to distributions made after 12/29/2022, to a certified individual. See Pub. 590-B  <button onclick="buttonPubs()">Open: irs-pubs</button> 
+- Distributions to terminally ill individuals. The exception to the 10% additional tax for early distributions is expanded to distributions made after 12/29/2022, to a certified individual. See Pub. 590-B  
 
 - Starting 12/29/2022, the 10% additional tax on early IRA distributions won't apply to income from a *corrective distribution*, as long as the correction is made by the tax return due date (including extensions).
   - Follow up?
@@ -134,24 +134,24 @@ layout: post
 <hr class="red">
 
 - In 2023, if you're covered by a retirement plan at work, your ability to deduct contributions to a traditional IRA is reduced if your modified adjusted gross income (AGI) is:
-  - Between $116,000 and $136,000 for married couples filing jointly or qualifying surviving spouses.
-  - Between $73,000 and $83,000 for single individuals or heads of household.
+  - Between 116,000 and 136,000 for married couples filing jointly or qualifying surviving spouses.
+  - Between 73,000 and 83,000 for single individuals or heads of household.
   - Less than $10,000 for married individuals filing separately.
-  - If your spouse is covered by a retirement plan at work but you aren’t, your deduction is reduced if your modified AGI is between $218,000 and $228,000. If it's $228,000 or more, you can't deduct contributions to a traditional IRA.
+  - If your spouse is covered by a retirement plan at work but you aren’t, your deduction is reduced if your modified AGI is between 218,000 and 228,000. If it's 228,000 or more, you can't deduct contributions to a traditional IRA.
   - For more information, see Chapter 9, How Much Can You Deduct.
 
 |Married filing jointly,<br>Qualifying surviving spouse|Single,<br>Head of household|Married filing separately
 |-|-|-|
-| Between $116,000 and $136,000 | Between $73,000 and $83,000 | Less than $10,000 |
+| Between 116,000 and 136,000 | Between 73,000 and 83,000 | Less than 10,000 |
 
 
 <hr class="red">
 
 - Roth IRA contributions, RE: Modified AGI limit for The Roth IRA contribution limit is reduced (phased out) in the following situations.
   
-  1. Your filing status is married filing jointly or qualifying surviving spouse and your modified AGI is $\geq$ \$218K. You can't make a Roth IRA contribution if your modified AGI $\geq$ \$228K$.
+  1. Your filing status is married filing jointly or qualifying surviving spouse and your modified AGI is $\geq$ 218K. You can't make a Roth IRA contribution if your modified AGI $\geq$ 228K.
   
-  2. Your filing status is single, head of household, or married filing separately and you didn't live with your spouse at any time in 2023 and your modified AGI is $\geq$  \$138K. You can't make a Roth IRA contribution if your modified AGI is $\geq$ \$153K$.
+  2. Your filing status is single, head of household, or married filing separately and you didn't live with your spouse at any time in 2023 and your modified AGI is $\geq$  138K. You can't make a Roth IRA contribution if your modified AGI is $\geq$ 153K.
   
   3. Your filing status is married filing separately, you lived with your spouse at any time during the year, and your modified AGI is more than zero. You can't make a Roth IRA contribution if your modified AGI is $\geq$ $10K. See Can You Contribute to a Roth IRA in chapter 9, later.  
 
@@ -159,9 +159,9 @@ layout: post
 
 - In 2023, your ability to contribute to a Roth IRA is reduced in these cases:
 
-  - If you're married filing jointly or a qualifying surviving spouse, your contributions are reduced if your modified AGI is $218,000 or more. You can't contribute if your AGI is $228,000 or more.
-  - If you're single, head of household, or married filing separately (and didn't live with your spouse in 2023), contributions are reduced if your modified AGI is $138,000 or more. You can't contribute if your AGI is $153,000 or more.
-  - If you're married filing separately and lived with your spouse during the year, your ability to contribute is reduced if your modified AGI is more than $0. You can't contribute if your AGI is $10,000 or more.
+  - If you're married filing jointly or a qualifying surviving spouse, your contributions are reduced if your modified AGI is $218,000 or more. You can't contribute if your AGI is 228,000 or more.
+  - If you're single, head of household, or married filing separately (and didn't live with your spouse in 2023), contributions are reduced if your modified AGI is 138,000 or more. You can't contribute if your AGI is 153,000 or more.
+  - If you're married filing separately and lived with your spouse during the year, your ability to contribute is reduced if your modified AGI is more than 0. You can't contribute if your AGI is 10,000 or more.
   - See Chapter 9, *Can You Contribute to a Roth IRA*.
 
 <hr class="red">
@@ -186,7 +186,7 @@ layout: post
 |Who must file|
 |:-:|
 |![Table 1-2](/irs.ea/assets/images/images.pub.17/table.1.2.png)|
-|YES:<br>UN-earned income $\geq$ 1,250 (For interest, dividends, cap. gains, IRA distribtuions)<br>Earned income $\geq$ \$13,850|
+|YES:<br>UN-earned income $\geq$ 1,250 (For interest, dividends, cap. gains, IRA distribtuions)<br>Earned income $\geq$ 13,850|
 
 
 ### Table 1.3
@@ -262,7 +262,7 @@ layout: post
 
 - Frivolous tax submissions
   1. The IRS has published a lists of frivolous positions. WHERE?
-  1. Penalty **-->** \$5,000 per submissions, see Civil Penalties
+  1. Penalty **-->** 5,000 per submissions, see Civil Penalties
 
 <hr class="red">
 
@@ -271,7 +271,7 @@ layout: post
   1. Include income from outside the U.S or from the sale of your main home
   1. Social security benefits if:
      1. You were married & filing a separate return
-     1. Half of your S.S. benefits plus(+) gross income & any tax-exempt interest is $\gt$ \$25 K or 
+     1. Half of your S.S. benefits plus(+) gross income & any tax-exempt interest is $\gt$ 25 K or 
      1. $32 K filing jointly
 
 <hr class="red">
