changedf format fo tables

--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -49,10 +49,24 @@ layout: post
 
 <hr class="red">
 
-|Who must file|
+- **Who must file**
+
+## Table 1-1: Filing for Gen. Taxpayers
+
+|Table 1-1, Gen. Filing |
 |:-:|
 |![Table 1-1](/irs.ea/assets/images/images.pub.17/table.1.1.png)|
+
+## Table 1-1: Filing with Dependents
+
+|Table 1-2, Filing with Dependents |
+|:-:|
 |![Table 1-2](/irs.ea/assets/images/images.pub.17/table.1.2.png)|
+
+## Table 1-3: Filing for Gen. Taxpayers
+
+|Table 1-3, Alternate Situations to File |
+|:-:|
 |![Table 1-3](/irs.ea/assets/images/images.pub.17/table.1.3.png)|
 
 <hr class="red">
