--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -51,19 +51,19 @@ layout: post
 
 - **Who must file**
 
-## Table 1-1: Filing for Gen. Taxpayers
+## Filing for Gen. Taxpayers Table
 
 |Table 1-1, Gen. Filing |
 |:-:|
 |![Table 1-1](/irs.ea/assets/images/images.pub.17/table.1.1.png)|
 
-## Table 1-1: Filing with Dependents
+## Filing with Dependents Table 
 
 |Table 1-2, Filing with Dependents |
 |:-:|
 |![Table 1-2](/irs.ea/assets/images/images.pub.17/table.1.2.png)|
 
-## Table 1-3: Filing for Gen. Taxpayers
+## Alternate Situations to File Table
 
 |Table 1-3, Alternate Situations to File |
 |:-:|
@@ -188,26 +188,6 @@ layout: post
 <hr class="red">
 
 - **Do I Have To File A Return?**
-
-### Table 1.1
-
-|Who must file|
-|:-:|
-|![Table 1-1](/irs.ea/assets/images/images.pub.17/table.1.1.png)|
-
-### Table 1.2
-
-|Who must file|
-|:-:|
-|![Table 1-2](/irs.ea/assets/images/images.pub.17/table.1.2.png)|
-|YES:<br>UN-earned income $\geq$ 1,250 (For interest, dividends, cap. gains, IRA distribtuions)<br>Earned income $\geq$ 13,850|
-
-
-### Table 1.3
-
-|Who must file|
-|:-:|
-|![Table 1-3](/irs.ea/assets/images/images.pub.17/table.1.3.png)|
 
 
 > **NOTE**: US and Puerto Rican residents must file even if you don't owe tax.  
@@ -393,14 +373,12 @@ layout: post
 
 <hr class="red">
 
-
   - Self-Select PIN, See:
     - 
 
   - Practitioner PIN  
     - allows one to authorize your tax practitioner to enter or generate your PIN. Your electronic return is considered a valid only when it **includes your PIN; last name; date of birth; and IP PIN**  
     - If filing jointly one needs ALL Spouse info.  
-
 
   - Form 8453  <button onclick="buttonPubs()">Open: irs-pubs</button>  
 
@@ -423,17 +401,21 @@ layout: post
 <script> function buttonvita() { window.open("www.IRS.gov/VITA"); } </script>
 <script> function buttontec() { window.open("www.IRS.govTCE"); } </script>
 
-  - Free Help With Your Return  
-    - **Volunteer Income Tax Assistance, VITA** <button onclick="buttonvita()">See: VITA Info</button>  
+- Free Help With Your Return  
+  - **Volunteer Income Tax Assistance, VITA** <button onclick="buttonvita()">See: VITA Info</button>  
     - IRS.gov/VITA   
     - download the *free IRS2Go app,  
     - call *800-906-9887* to find the nearest VITA location  
-    - **Tax Counseling for the Elderly, TCE** <button onclick="buttonvtec()">See: TCE Info</button>  
+<br>
+  - **Tax Counseling for the Elderly, TCE** <button onclick="buttonvtec()">See: TCE Info</button>  
     - IRS.gov/TCE, *etc*. to find the nearest TCE location  
 
 - When Using a Tax Professional  (ADD MORE??)  
 
 ## When Do I File?
+
+
+## Dates & Extentions Table
 
 |When To File|
 |:-:|
@@ -463,16 +445,17 @@ layout: post
 
 <hr class="red">
 
-Table 1-6. Six Steps for Preparing Your Paper Return
+## 6 Steps for Preparing Your Paper Return
 
-- **6 Step of How to File**  
-  1. Get all records  
-  1. Get forms, schedules, publications  
-  1. Fill in return  
-  1. Check return  
-  1. Sign and Date return  
-  1. Attach all req'd forms & schedules  
-
+|Table 1-6. Six Steps for Preparing Your Paper Return|
+|:-|
+|**6 Step of How to File**|
+|1. Collect all records|
+|2. Collect forms, schedules, publications|
+|3. Fill in return|
+|4. Check return|
+|5. Sign & Date return|
+|6. Attach all req'd forms & schedules, Send In|
 
 <hr class="red">
 
@@ -503,12 +486,13 @@ Your accounting method is how you record income and expenses. Most people use ei
 1. Payments to a Third Party or Agent: If someone else is paid from your property or an agent receives income for you, it's considered your income when they receive it.
 1. Checks: A check made available to you before the end of the tax year counts as income for that year, whether or not you cash it.
 
-  - If there are circumstances where you don’t have access to the income, you might not have "constructively received" it.
+- If there are circumstances where you don’t have access to the income, you might not have "constructively received" it.
 
-   - Example: A teacher agrees to only receive the difference between their salary and the cost of a substitute teacher. The amount deducted for the substitute is not considered "constructively received."
+- Example: A teacher agrees to only receive the difference between their salary and the cost of a substitute teacher. The amount deducted for the substitute is not considered "constructively received."
 
 - Accrual Method: You report income when you earn it, not when you receive it, and you deduct expenses when you incur them, not when you pay them.
-  - Advance Payments: Any payments you receive in advance, like rent or interest, are generally included as income in the year you receive them, regardless of your accounting method. However, a limited deferral may apply for certain payments.
+
+- Advance Payments: Any payments you receive in advance, like rent or interest, are generally included as income in the year you receive them, regardless of your accounting method. However, a limited deferral may apply for certain payments.
 
 - See Publication 538, Accounting Periods and Methods
 
