--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -105,9 +105,10 @@ layout: post
 
 <hr class="red">
 
-- IRA contribution limit increased to:
-  - Starting in 2023, the limit for **IRA contributions is $6,500**. If you're **50 or older, the limit is $7,500**. 
-  - Before 2023, *Was 6,000 and 7,000*.
+- 2023 IRA contribution limit increased to:
+  - The **IRA contributions limit is $6,500**. 
+  - If you're **50 or older, the limit is $7,500**. 
+    - Before 2023, *Was 6,000 and 7,000*.
 
 <hr class="red">
 
@@ -120,15 +121,15 @@ layout: post
   - Distributions related to federally declared disasters.
   - Distributions made to someone who is terminally ill.
   - Distributions to firefighters who are either 50 years old or have 25 years of service under their plan.
-  - See: **Form 5329 and Publication 590-B**.
+  - See: **Form 5329 and Publication 590-B**. <button onclick="buttonPubs()">Open: irs-pubs</button> 
 
-- Use: `www.irs.gov/directfile`
+- See: `www.irs.gov/directfile`
 
 - Health Flexible Spending Act (HFSA) under cafeteria plans = 3,050, under section 125(i) on voluntary salary redux.
 
 - Temp. allowance of 100% business meal deduction: **Expired**, section 210.
 
-- Diaster tax relief - See Disaster-Related Relief in Pub. 590-B   <button onclick="buttonPubs()">Open: irs-pubs</button> 
+- Diaster tax relief - See Disaster-Related Relief in Pub. 590-B  <button onclick="buttonPubs()">Open: irs-pubs</button> 
 
 - Distributions to terminally ill individuals. The exception to the 10% additional tax for early distributions is expanded to distributions made after 12/29/2022, to a certified individual. See Pub. 590-B  
 
