--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -51,21 +51,21 @@ layout: post
 
 - **Who must file**
 
-## Filing for Gen. Taxpayers Table
+## Filing; Gen. Taxpayers Table
 
 |Table 1-1, Gen. Filing |
 |:-:|
 |![Table 1-1](/irs.ea/assets/images/images.pub.17/table.1.1.png)|
 
-## Filing with Dependents Table 
+## Filing; Dependents Table 
 
 |Table 1-2, Filing with Dependents |
 |:-:|
 |![Table 1-2](/irs.ea/assets/images/images.pub.17/table.1.2.png)|
 
-## Alternate Situations to File Table
+## Other Situations to File Table
 
-|Table 1-3, Alternate Situations to File |
+|Table 1-3, Other Situations to File |
 |:-:|
 |![Table 1-3](/irs.ea/assets/images/images.pub.17/table.1.3.png)|
 
@@ -420,9 +420,9 @@ layout: post
 
 |When To File|
 |:-:|
-|![Table 1.5](/assets/images/images.pub.17/table.1.5.png)|
+|![Table 1.5](/irs.ea/assets/images/images.pub.17/table.1.5.png)|
 
-- Filing late  
+- LATE Filing    
   - Penalities and Interest - Interest is charged from the due date of your return, even if you get an extension.  Penalities (failure-to-file penalty) is ~5% for each month or part of a month that it is late, but not more 25%.  
 
 - Filing for a decedent  
@@ -431,7 +431,6 @@ layout: post
 - Extensions of Time To File, Automatic Extension  
   - **Form 4868**: Application for Automatic Extension of Time to File U.S. Individual Income Tax Return  
   - **Extensions $\geq$ 2 month, Use:6 months**  
-
 
 - For Non-resident alien  
   - If you earned in the US, then 4/15   
@@ -450,7 +449,6 @@ layout: post
 
 |Table 1-6. Six Steps for Preparing Your Paper Return|
 |:-|
-|**6 Step of How to File**|
 |1. Collect all records|
 |2. Collect forms, schedules, publications|
 |3. Fill in return|
